@@ -37,6 +37,8 @@ class NonLatinFontSizeIncrease(Filter):
         if issubclass(type(card.card_type), Vocabulary) and not \
             isinstance(type(card.card_type), Vocabulary):
             return text
+        if fact_key not in card.card_type.fact_key_format_proxies():
+            return text
         proxy_key = card.card_type.fact_key_format_proxies()[fact_key]
         font_string = self.config().card_type_property(\
             "font", card.card_type, proxy_key)
