@@ -27,7 +27,10 @@ class PyQtConfiguration(Hook):
              "add_cards_dlg_state": None,
              "preview_cards_dlg_state": None,
              "edit_card_dlg_state": None,
+             "manage_card_types_dlg_state": None,
+             "edit_M_sided_card_type_dlg_state": None,
              "plugins_dlg_state": None,
+             "sync_dlg_state": None,
              "clone_help_shown": False,
              "browse_cards_dlg_state": None,
              "browse_cards_dlg_splitter_1_state": None,
@@ -39,7 +42,6 @@ class PyQtConfiguration(Hook):
              "configuration_dlg_state": None,
              "activate_cards_dlg_state": None,
              "activate_cards_dlg_splitter_state": None,
-             "edit_M_sided_card_type_dialog_state": None,
              "sync_help_shown": False,
              "server_for_sync_as_client": "",
              "port_for_sync_as_client": 8512,
