@@ -18,7 +18,7 @@ WIDGETS = ui_main_wdgt.py ui_add_cards_dlg.py \
 	ui_tip_dlg.py ui_import_dlg.py ui_compact_database_dlg.py \
 	ui_delete_unused_media_files_dlg.py ui_rename_card_type_dlg.py \
 	ui_export_dlg.py ui_export_metadata_dlg.py \
-	ui_edit_M_sided_card_type_dlg.py ui_edit_M_sided_template_wdgt.py
+	ui_edit_M_sided_card_type_dlg.py ui_edit_M_sided_card_template_wdgt.py
 
 default: $(WIDGETS)
 	pyrcc5 mnemosyne.qrc -o mnemosyne_rc.py
