@@ -17,8 +17,9 @@ Mnemosyne 2.6
   that would change the number of cards per fact.)
 - Fix display of question in the card browser in case you configured
   Mnemosyne to show question and answer in the same window.
-- Fix bug with increase of non-latin fonts using some fonts (reported by
-  JDD).
+- Fix bugs with increase of non-latin fonts (reported by JDD annd Scott
+  Youngman).
+- Fix cornercase bug in RTL handler (reported by Fonzo99).
 - Upgrade to PyQt 5.9.1.
 - Disallow renaming a single tag to multiple tags in the tag tree widget.
   (reported by abacus).
